--- a/02_CSS_Essential_Training/Code/css_portfolio/css/styles.css
+++ b/02_CSS_Essential_Training/Code/css_portfolio/css/styles.css
@@ -15,6 +15,9 @@ https://coolors.co/f7fff7-343434-2f3061-ffe66d-a1c6d7
 ----------------------------------------*/
 body {
     color: #343434;
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -30,6 +33,26 @@ a {
 a:hover {
     text-decoration: none;
 }
+
+h2 {
+    margin: 0;
+}
+
+/* Apply curvice font-face to both h1 and h2 */
+
+h1,
+h2 {
+    font-family: 'Caveat', cursive;
+    /* font-size: 60px; */
+}
+
+.content-wrap {
+    width: 800px;
+    margin: 0 auto;
+    padding: 60px 0;
+}
+
+
 
 /* Profile
 ----------------------------------------*/
@@ -64,6 +87,7 @@ header {
     /* Rounding corners for button effect, bigger the number more rounded edges will be */
     border-radius: 4px;
     /* Hover style using opacity https://www.webfx.com/web-design/hex-to-rgb/*/
+    display: inline-block;
 }
 
 .projects .btn:hover {
